# Canvas-Vulkan

./: .gitignore  CMakeLists.txt  READE.md
include/: Block.h  Buffer.h  Camera.h  Character.h  CommandBuffer.h  CommandPool.h  DescriptorPool.h  DescriptorSetLayout.h  Editor.h  Fence.h  Font.h  FrameBuffer.h  Image.h  ImageView.h  Line.h  Memory.h  Pipeline.h  PipelineLayout.h  Plane.h  RenderPass.h  Sampler.h  Semaphore.h  ShaderModule.h  Swapchain.h  Timer.h  Tools.h  Triangle.h  Vertex.h  Vulkan.h  VulkanHelp.h
shaders/: Canvas.frag  Canvas.vert  Cursor.frag  Cursor.vert  Font.frag  Font.vert  brush.frag  brush.vert  compile.bat  compile.sh  frag.spv  shader.frag  shader.vert  vert.spv
shaders/spv/: FragBrush.spv  FragCanvas.spv  VertBrush.spv  VertCanvas.spv
src/: Buffer.cpp  CMakeLists.txt  Camera.cpp  CommandBuffer.cpp  CommandPool.cpp  DescriptorPool.cpp  DescriptorSetLayout.cpp  Editor.cpp  Fence.cpp  Font.cpp  FrameBuffer.cpp  Image.cpp  ImageView.cpp  Memory.cpp  Pipeline.cpp  PipelineLayout.cpp  RenderPass.cpp  Sampler.cpp  Semaphore.cpp  Server.cpp  ShaderModule.cpp  SwapChain.cpp  Timer.cpp  Vulkan.cpp  client1.cpp  client2.cpp  main.cpp
textures/shaders/: Brush.frag  Brush.vert  Canvas.frag  compile.bat
textures/shaders/spv/: FragBrush.spv  FragCanvas.spv
